--- a/TRBH_WeChatFunction/WeChat.Application/Web.config
+++ b/TRBH_WeChatFunction/WeChat.Application/Web.config
@@ -17,6 +17,7 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <!--配置测试上传-->
     <add key="webJBL" value="true" />
   </appSettings>
   <system.web>
