--- a/TRBH_WeChatFunction/WeChat.Application/Web.config
+++ b/TRBH_WeChatFunction/WeChat.Application/Web.config
@@ -11,6 +11,8 @@
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-WeChat.Application-20180905032844.mdf;Initial Catalog=aspnet-WeChat.Application-20180905032844;Integrated Security=True"
       providerName="System.Data.SqlClient" />
+    <!--数据库连接字符串-->
+    <add name="ConnectionString" connectionString="server=server;database=WeiXinData;User Id=sa;pwd=888"/>
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
