--- a/TRBH_WeChatFunction/WeChat.Bussiness/packages.config
+++ b/TRBH_WeChatFunction/WeChat.Bussiness/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="athoma13.RulesEngine" version="2.1.0" targetFramework="net45" />
+  <package id="log4net" version="2.0.8" targetFramework="net45" />
   <package id="System.Linq" version="4.3.0" targetFramework="net45" />
   <package id="System.Linq.Dynamic" version="1.0.7" targetFramework="net45" />
 </packages>
