--- a/TRBH_WeChatFunction/WeChat.Application/WeChat.Application.csproj
+++ b/TRBH_WeChatFunction/WeChat.Application/WeChat.Application.csproj
@@ -174,6 +174,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="H5Controllers\CompanyInformationController.cs" />
+    <Compile Include="H5Controllers\EngineerController.cs" />
     <Compile Include="Library\GeneralControl.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
@@ -238,6 +239,7 @@
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\CompanyInformation\Index.cshtml" />
+    <Content Include="Views\Engineer\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
